--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,6 +23,7 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
