--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,6 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
-        openai_api_key: ${{ secrets.OPENAI_API_KEY }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -32,3 +31,5 @@ jobs:
     - name: Test with pytest --pylint
       run: |
         pytest
+      env: |
+        openai_api_key: ${{ secrets.OPENAI_API_KEY }}
