Attempt to access Github API Key

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,5 +31,5 @@ jobs:
     - name: Test with pytest --pylint
       run: |
         pytest
-      env: |
+      with:
         openai_api_key: ${{ secrets.OPENAI_API_KEY }}
