Attempt to access Github API Key

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,7 +30,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Create .env file
       run: |
-        echo "OPEN_AI_KEY=${{ secrets.OPENAI_API_KEY }}" > .env
+        echo "${{ secrets.OPENAI_API_KEY }}" > .env
     - name: Test with pytest --pylint
       run: |
         pytest
